add marquee tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Prasath</title>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <marquee>This text will bounce</marquee>
 </body>
 </html>
